Externalize CORS origins via env var, update Playwright baseURL
Read cors.allowed-origins from CORS_ALLOWED_ORIGINS env var in both
REST and Kafka SecurityConfig. Defaults to localhost for local dev.
Set via Rancher secret for K8s deployments.

Playwright configs now default to the K8s NodePort endpoints and
support BASE_URL override.

Co-authored-by: Ona <no-reply@ona.com>